# karpador-jump-sim

./: .gitignore  AGENTS.md  Cargo.toml  README.md  autoresearch-launch.json.prev.20260426-191137  autoresearch-launch.prev.json  autoresearch-runtime.json.prev.20260426-191137  autoresearch-runtime.log.prev.20260426-191137  autoresearch-runtime.prev.json  autoresearch-state.json.prev  autoresearch-state.json.prev.20260426-191137  autoresearch-state.prev.json  index.html  research-results.prev.tsv  research-results.tsv.prev  research-results.tsv.prev.20260426-191137
assets/: index-CxweU3oC.js  index-DU1T7zOc.css
decoded_master_data/: achievement.json  bonus_type.json  breeder_rank.json  food_bonus.json  ikesu_booster.json  kp_to_jump_height.json  magikarp_pattern_bonus_list.json  magikarp_pattern_data.json  magikarp_pattern_group.json  opponent_names.json  other_parameters.json  random_event_list.json  random_event_parameters.json  shop_coin.json  treasure_data.json  unlock_list.json
docs/: index.html
examples/: start_config.json
master_data/: competition_list.json  food_base_data.json  support_pokemon.json  training_base_data.json
rust/: Cargo.toml  README.md
rust/decoded_master_data/: food_power.json  food_price.json  item_list.json  league_list.json  magikarp_rank.json  re_fishing_prices.json  rod_list.json  ticket_exchange_list.json  tips_data.json  training_min_power.json  training_price.json  unlock_features.json
rust/src/: data.rs  lib.rs  main.rs  model.rs  player_policy.rs  rules.rs  runtime_wasm.rs  sim.rs  start_config.rs  strategy.rs  walltime.rs
(+41 files in other folders)
